with route name issue fixed,groups added and docs updated
